--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@nextui-org/button": "2.0.34",
@@ -27,12 +27,21 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "clsx": "2.1.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "~11.1.1",
+    "fs": "^0.0.1-security",
+    "gray-matter": "^4.0.3",
     "intl-messageformat": "^10.5.0",
     "next": "14.2.4",
+    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "rehype-katex": "^7.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-lint": "^10.0.0",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
