--- a/package.json
+++ b/package.json
@@ -35,13 +35,10 @@
     "next": "14.2.4",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
-    "react": "18.3.1",
+    "react": "18",
     "react-dom": "18.3.1",
-    "rehype-katex": "^7.0.0",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-lint": "^10.0.0",
-    "remark-math": "^6.0.0"
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
