--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react": "18",
     "react-dom": "18.3.1",
     "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0"
+    "remark-gfm": "^4.0.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
