--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nextui-org/link": "2.0.32",
     "@nextui-org/listbox": "2.1.21",
     "@nextui-org/navbar": "2.0.33",
+    "@nextui-org/pagination": "^2.0.33",
     "@nextui-org/snippet": "2.0.38",
     "@nextui-org/switch": "2.0.31",
     "@nextui-org/system": "2.2.1",
@@ -29,7 +30,6 @@
     "clsx": "2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "~11.1.1",
-    "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "intl-messageformat": "^10.5.0",
     "next": "14.2.4",
