--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "next-themes": "^0.2.1",
     "react": "18",
     "react-dom": "18.3.1",
+    "rehype-katex": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
+    "remark-lint": "^10.0.0",
+    "remark-math": "^6.0.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
