--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/code": "2.0.29",
     "@nextui-org/divider": "^2.0.28",
     "@nextui-org/dropdown": "^2.1.26",
+    "@nextui-org/image": "^2.0.29",
     "@nextui-org/input": "2.2.2",
     "@nextui-org/kbd": "2.0.30",
     "@nextui-org/link": "2.0.32",
